<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Vitalsense</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    
    <string name="input_view">Input Reading</string>
    <string name="results_view">Results</string>
    <string name="graph_view">Graph</string>
    <string name="settings_view">Settings</string>
    <string name="about_view">About</string>
    <string name="log_out_view">Log Out</string>
    <string-array name="menu_array">
        <item>@string/input_view</item>
        <item>@string/results_view</item>
        <item>@string/graph_view</item>
        <item>@string/settings_view</item>
        <item>@string/about_view</item>
        <item>@string/log_out_view</item>
    </string-array>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_help">Help</string>
    <string name="result_data">data</string>
    <string name="date_time_title">Date &amp;\nTime</string>
    <string name="systolic_title">Systolic\nPressure</string>
    <string name="diastolic_title">Diastolic\nPressure</string>
    <string name="pulse_title">Pulse\nRate</string>
    <string name="input_reading_button_title">INPUT READING</string>
    <string name="view">View</string>
    <string name="enter_row_id">Enter Row ID</string>
    <string name="get_information">Get Information</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="manual_input">Manual Input</string>
    <string name="sync_with_hv">Sync with HealthVault</string>
    <string name="instruction">Hold this handset next to the blood pressure sensor to display your reading, or use Manual Input.</string>
    <string name="under_construction">Function currently under construction.</string>
    <string name="about_title">Version 1.0.0.0.0.</string>
    <string name="about_subtitle">© Vitalsense 2014.\n</string>
    <string name="about_text">Vitalsense and the Vitalsense logos are trademarks of Vitalsense Inc. All rights reserved.\n\nVitalsense for Android is built using open source software.</string>
    
</resources>
