<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/dialog_padding"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/dialog_box_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="@dimen/dialog_title_text" />
    
    <TextView
        android:id="@+id/dialog_box_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_subtitle"
        android:textSize="@dimen/dialog_subtitle_text" />
    
    <TextView
        android:id="@+id/dialog_box_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:textSize="@dimen/dialog_body_text" />

</LinearLayout>
