<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    tools:context=".ResultsFragment" >

    <TableLayout
        android:id="@+id/results_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_panel"        
        android:orientation="vertical" >

        <TableRow
            android:orientation="horizontal"
            android:layout_width="fill_parent" >

            <TextView
                android:id="@+id/date_time_title"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:layout_weight=".35"
                android:gravity="center_horizontal"
                android:background="@drawable/black_table_cell"
                android:text="@string/date_time_title"
                android:textColor="@color/green"
                android:textSize="@dimen/table_header_text"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/systolic_title"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:layout_weight=".25"
                android:gravity="center_horizontal"
                android:background="@drawable/black_table_cell"
                android:text="@string/systolic_title"
                android:textColor="@color/green"
                android:textSize="@dimen/table_header_text"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/diastolic_title"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:layout_weight=".25"
                android:gravity="center_horizontal"
                android:background="@drawable/black_table_cell"
                android:text="@string/diastolic_title"
                android:textColor="@color/green"
                android:textSize="@dimen/table_header_text"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/pulse_title"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:layout_weight=".15"
                android:gravity="center_horizontal"
                android:background="@drawable/black_table_cell"
                android:text="@string/pulse_title"
                android:textColor="@color/green"
                android:textSize="@dimen/table_header_text"
                android:textStyle="italic" />
            
        </TableRow>
        
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

	        <TableRow
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:id="@+id/time_results_data"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight=".35"
	                android:paddingTop="@dimen/table_padding"
	                android:gravity="center_horizontal"
	                android:background="@drawable/white_table_cell"
	                android:text="@string/result_data"
	                android:textSize="@dimen/table_body_text"
	                android:textColor="@android:color/black" />
	            
	            <TextView
	                android:id="@+id/systolic_results_data"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight=".25"
	                android:paddingTop="@dimen/table_padding"
	                android:gravity="center_horizontal"
	                android:background="@drawable/white_table_cell"
	                android:text="@string/result_data"
	                android:textSize="@dimen/table_body_text"
	                android:textColor="@android:color/black" />
	            
	            <TextView
	                android:id="@+id/diastolic_results_data"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight=".25"
	                android:paddingTop="@dimen/table_padding"
	                android:gravity="center_horizontal"
	                android:background="@drawable/white_table_cell"
	                android:text="@string/result_data"
	                android:textSize="@dimen/table_body_text"
	                android:textColor="@android:color/black" />
	            
	            <TextView
	                android:id="@+id/pulse_results_data"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight=".15"
	                android:paddingTop="@dimen/table_padding"
	                android:gravity="center_horizontal"
	                android:background="@drawable/white_table_cell"
	                android:text="@string/result_data"
	                android:textSize="@dimen/table_body_text"
	                android:textColor="@android:color/black" />
	            
	        </TableRow>
	        
        </ScrollView>
        
    </TableLayout>
    
</RelativeLayout>